tests/cli_renderer_unicode/cli_renderer_unicode.exp
Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ basic.js:6:2

Cannot cast `null` to empty because null [1] is incompatible with empty [2].

   basic.js:6:2
   6│ (null: empty); // Error: null ~> empty
       ^^^^ [1]

References:
   basic.js:6:8
   6│ (null: empty); // Error: null ~> empty
             ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame.js:2:6

Cannot cast object literal to object type because number [1] is incompatible with empty [2] in property `p`.

   code_frame.js:2:6
   2│ ({p: 42}: {p: empty});
           ^^ [1]

References:
   code_frame.js:2:15
   2│ ({p: 42}: {p: empty});
                    ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame.js:4:6

Cannot cast object literal to object type because number [1] is incompatible with empty [2] in property `p`.

   code_frame.js:4:6
   4│ ({p: 42}: {p: empty});
           ^^ [1]

References:
   code_frame.js:4:15
   4│ ({p: 42}: {p: empty});
                    ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame.js:7:6

Cannot cast object literal to object type because number [1] is incompatible with empty [2] in property `p`.

   code_frame.js:7:6
   7│   p: 42,
           ^^ [1]

References:
   code_frame.js:9:6
   9│   p: empty,
           ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame.js:12:6

Cannot cast object literal to object type because number [1] is incompatible with empty [2] in property `p`.

   code_frame.js:12:6
   12│ ({p: 42}: {p: empty});
            ^^ [1]

References:
   code_frame.js:12:15
   12│ ({p: 42}: {p: empty});
                     ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:10:5

Cannot cast array literal to tuple type because number [1] is incompatible with empty [2] in index 0.

   code_frame_omit.js:10:5
   10│   ([x, y]: [empty, empty]);
           ^

References:
   code_frame_omit.js:7:13
    7│   const x = 42;
                   ^^ [1]
   code_frame_omit.js:10:13
   10│   ([x, y]: [empty, empty]);
                   ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:10:8

Cannot cast array literal to tuple type because number [1] is incompatible with empty [2] in index 1.

   code_frame_omit.js:10:8
   10│   ([x, y]: [empty, empty]);
              ^

References:
   code_frame_omit.js:9:13
    9│   const y = 42;
                   ^^ [1]
   code_frame_omit.js:10:20
   10│   ([x, y]: [empty, empty]);
                          ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:16:5

Cannot cast array literal to tuple type because number [1] is incompatible with empty [2] in index 0.

   code_frame_omit.js:16:5
   16│   ([x, y]: [empty, empty]);
           ^

References:
   code_frame_omit.js:7:13
    7│   const x = 42;
                   ^^ [1]
   code_frame_omit.js:16:13
   16│   ([x, y]: [empty, empty]);
                   ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:16:8

Cannot cast array literal to tuple type because number [1] is incompatible with empty [2] in index 1.

   code_frame_omit.js:16:8
   16│   ([x, y]: [empty, empty]);
              ^

References:
   code_frame_omit.js:9:13
    9│   const y = 42;
                   ^^ [1]
   code_frame_omit.js:16:20
   16│   ([x, y]: [empty, empty]);
                          ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:17:5

Cannot cast array literal to tuple type because number [1] is incompatible with empty [2] in index 0.

   code_frame_omit.js:17:5
   17│   ([x, y]: [empty, empty]);
           ^

References:
   code_frame_omit.js:7:13
    7│   const x = 42;
                   ^^ [1]
   code_frame_omit.js:17:13
   17│   ([x, y]: [empty, empty]);
                   ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:17:8

Cannot cast array literal to tuple type because number [1] is incompatible with empty [2] in index 1.

   code_frame_omit.js:17:8
   17│   ([x, y]: [empty, empty]);
              ^

References:
   code_frame_omit.js:9:13
    9│   const y = 42;
                   ^^ [1]
   code_frame_omit.js:17:20
   17│   ([x, y]: [empty, empty]);
                          ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:26:5

Cannot cast array literal to tuple type because number [1] is incompatible with empty [2] in index 0.

   code_frame_omit.js:26:5
   26│   ([x, y]: [empty, empty]);
           ^

References:
   code_frame_omit.js:21:13
   21│   const x = 42;
                   ^^ [1]
   code_frame_omit.js:26:13
   26│   ([x, y]: [empty, empty]);
                   ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:26:8

Cannot cast array literal to tuple type because number [1] is incompatible with empty [2] in index 1.

   code_frame_omit.js:26:8
   26│   ([x, y]: [empty, empty]);
              ^

References:
   code_frame_omit.js:25:13
   25│   const y = 42;
                   ^^ [1]
   code_frame_omit.js:26:20
   26│   ([x, y]: [empty, empty]);
                          ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:32:5

Cannot cast array literal to tuple type because number [1] is incompatible with empty [2] in index 0.

   code_frame_omit.js:32:5
   32│   ([x, y]: [empty, empty]);
           ^

References:
   code_frame_omit.js:21:13
   21│   const x = 42;
                   ^^ [1]
   code_frame_omit.js:32:13
   32│   ([x, y]: [empty, empty]);
                   ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:32:8

Cannot cast array literal to tuple type because number [1] is incompatible with empty [2] in index 1.

   code_frame_omit.js:32:8
   32│   ([x, y]: [empty, empty]);
              ^

References:
   code_frame_omit.js:25:13
   25│   const y = 42;
                   ^^ [1]
   code_frame_omit.js:32:20
   32│   ([x, y]: [empty, empty]);
                          ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:33:5

Cannot cast array literal to tuple type because number [1] is incompatible with empty [2] in index 0.

   code_frame_omit.js:33:5
   33│   ([x, y]: [empty, empty]);
           ^

References:
   code_frame_omit.js:21:13
   21│   const x = 42;
                   ^^ [1]
   code_frame_omit.js:33:13
   33│   ([x, y]: [empty, empty]);
                   ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:33:8

Cannot cast array literal to tuple type because number [1] is incompatible with empty [2] in index 1.

   code_frame_omit.js:33:8
   33│   ([x, y]: [empty, empty]);
              ^

References:
   code_frame_omit.js:25:13
   25│   const y = 42;
                   ^^ [1]
   code_frame_omit.js:33:20
   33│   ([x, y]: [empty, empty]);
                          ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:43:5

Cannot cast array literal to tuple type because number [1] is incompatible with empty [2] in index 0.

   code_frame_omit.js:43:5
   43│   ([x, y]: [empty, empty]);
           ^

References:
   code_frame_omit.js:37:13
   37│   const x = 42;
                   ^^ [1]
   code_frame_omit.js:43:13
   43│   ([x, y]: [empty, empty]);
                   ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:43:8

Cannot cast array literal to tuple type because number [1] is incompatible with empty [2] in index 1.

   code_frame_omit.js:43:8
   43│   ([x, y]: [empty, empty]);
              ^

References:
   code_frame_omit.js:42:13
   42│   const y = 42;
                   ^^ [1]
   code_frame_omit.js:43:20
   43│   ([x, y]: [empty, empty]);
                          ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:49:5

Cannot cast array literal to tuple type because number [1] is incompatible with empty [2] in index 0.

   code_frame_omit.js:49:5
   49│   ([x, y]: [empty, empty]);
           ^

References:
   code_frame_omit.js:37:13
   37│   const x = 42;
                   ^^ [1]
   code_frame_omit.js:49:13
   49│   ([x, y]: [empty, empty]);
                   ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:49:8

Cannot cast array literal to tuple type because number [1] is incompatible with empty [2] in index 1.

   code_frame_omit.js:49:8
   49│   ([x, y]: [empty, empty]);
              ^

References:
   code_frame_omit.js:42:13
   42│   const y = 42;
                   ^^ [1]
   code_frame_omit.js:49:20
   49│   ([x, y]: [empty, empty]);
                          ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:50:5

Cannot cast array literal to tuple type because number [1] is incompatible with empty [2] in index 0.

   code_frame_omit.js:50:5
   50│   ([x, y]: [empty, empty]);
           ^

References:
   code_frame_omit.js:37:13
   37│   const x = 42;
                   ^^ [1]
   code_frame_omit.js:50:13
   50│   ([x, y]: [empty, empty]);
                   ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ code_frame_omit.js:50:8

Cannot cast array literal to tuple type because number [1] is incompatible with empty [2] in index 1.

   code_frame_omit.js:50:8
   50│   ([x, y]: [empty, empty]);
              ^

References:
   code_frame_omit.js:42:13
   42│   const y = 42;
                   ^^ [1]
   code_frame_omit.js:50:20
   50│   ([x, y]: [empty, empty]);
                          ^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ group.js:7:6

Cannot cast object literal to object type because number [1] is incompatible with string [2] in property `a`.

   group.js:7:6
    7│   a: 1,
            ^ [1]

References:
   group.js:11:6
   11│   a: string,
            ^^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ group.js:8:6

Cannot cast object literal to object type because number [1] is incompatible with string [2] in property `b`.

   group.js:8:6
    8│   b: 2,
            ^ [1]

References:
   group.js:12:6
   12│   b: string,
            ^^^^^^ [2]


Error ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈ group.js:9:6

Cannot cast object literal to object type because number [1] is incompatible with string [2] in property `c`.

   group.js:9:6
    9│   c: 3,
            ^ [1]

References:
   group.js:13:6
   13│   c: string,
            ^^^^^^ [2]



Found 26 errors
